--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,6 @@ jobs:
     strategy:
       matrix:
         emacs-version:
-          - 24.4
-          - 24.5
           - 25.1
           - 25.2
           - 25.3
@@ -44,5 +42,5 @@ jobs:
     - name: build
       run: 'cask build'
 
-    - name: package
-      run: 'cask package'
+    # - name: package
+    #   run: 'cask package'
