--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
     - uses: actions/checkout@v1
 
-    - uses: actions/setup-python@v1.1.1
+    - uses: actions/setup-python@v2
       with:
         python-version: '3.6'
         architecture: 'x64'
@@ -42,5 +42,5 @@ jobs:
     - name: build
       run: 'cask build'
 
-    # - name: package
-    #   run: 'cask package'
+    - name: package
+      run: 'cask package'
