--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         emacs-version:
           - 24.4
@@ -25,11 +26,6 @@ jobs:
       run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
 
     - uses: actions/checkout@v1
-
-    - uses: actions/setup-python@v2
-      with:
-        python-version: '3.6'
-        architecture: 'x64'
 
     - uses: purcell/setup-emacs@master
       with:
