--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        emacs-version: [24.4, 24.5, 25.1, 25.2, 25.3, 26.1, 26.2, 26.3, 27.1, 27.2, 28.1]
+        emacs-version: [24.5, 25.3, 26.3, 27.2, 28.1]
         experimental: [false]
         include:
           - emacs-version: snapshot
@@ -34,10 +34,10 @@ jobs:
           version: 0.8.6
 
       - name: install
-        run: 'cask install'
+        run: "cask install"
 
       - name: build
-        run: 'cask build'
+        run: "cask build"
 
       - name: package
-        run: 'cask package'
+        run: "cask package"
