--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - uses: conao3/setup-cask@master
         with:
-          version: snapshot
+          version: 0.8.8
 
       - name: install
         run: "cask install"
