--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
         emacs-version: [25.3, 26.3, 27.2, 28.2]
         experimental: [false]
         include:
-          - emacs-version: [24.5, snapshot]
+          - emacs-version: 24.5
+            experimental: true
+          - emacs-version: snapshot
             experimental: true
 
     steps:
